# GameOfLife

./: CMakeLists.txt  README.md  main.cpp
scenarios/: glider_gun.json
src/cell/: cell.cpp  cell.hpp
src/game/: game.cpp  game.hpp
src/rectangle/: rectangle.cpp  rectangle.hpp
src/window/: window.cpp  window.hpp
